# nvidia-agent-templates

./: .env.sample  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.yaml  Taskfile.yml  Taskfile_agent_crewai.yml  Taskfile_agent_generic_base.yml  Taskfile_agent_langgraph.yml  Taskfile_agent_llamaindex.yml  Taskfile_development.yml  pulumi_config.json  pyproject.toml  quickstart.py
.datarobot/answers/: agent-agent_langgraph.yml  fastapi-oauth-web.yml  fastapi-sqlite-web.yml  fastapi-web.yml  react-frontend_web.yml
.github/: .licenserc.yaml
.github/workflows/: agent_crewai-test.yml  agent_generic_base-test.yml  agent_langgraph-test.yml  agent_llamaindex-test.yml  api_tests.yml  frontend_web-vitest.yml  infra-python.yml  web-test.yml
agent_crewai/: .gitignore  README.md  Taskfile.yml  cli.py  pyproject.toml
agent_crewai/agent_cli/: kernel.py
agent_crewai/custom_model/: agent.py  custom.py  helpers.py  helpers_telemetry.py  model-metadata.yaml  requirements.txt  tools_client.py
agent_crewai/custom_model/my_agent_class/: agent.py
agent_crewai/docker_context/: requirements.in  requirements.txt
agent_crewai/tests/: conftest.py  test_agent_cli_environment.py  test_agent_cli_kernel.py  test_custom_model.py  test_custom_model_agent.py  test_my_agent_class_agent.py  test_run_agent.py
agent_generic_base/: README.md  Taskfile.yml  cli.py  pyproject.toml
agent_generic_base/agent_cli/: kernel.py
agent_generic_base/custom_model/: agent.py  auth.py  custom.py  helpers.py  helpers_telemetry.py  model-metadata.yaml  tools_client.py
agent_generic_base/docker_context/: README.md  requirements.in  requirements.txt  run_agent.py
agent_generic_base/tests/: conftest.py  test_custom_model_agent.py  test_run_agent.py
agent_langgraph/: README.md  Taskfile.yml  Taskfile_infra.yml  cli.py  pyproject.toml
agent_langgraph/agent_cli/: environment.py  kernel.py
agent_langgraph/custom_model/: agent.py  auth.py  custom.py  helpers.py  helpers_telemetry.py  model-metadata.yaml  pyproject.toml  tools.py
agent_langgraph/custom_model/my_agent_class/: agent.py
agent_langgraph/docker_context/: Dockerfile  Dockerfile.prod  env_info.json  pyproject.toml  requirements.in  requirements.txt  run_agent.py
agent_langgraph/tests/: conftest.py  test_agent_cli_kernel.py  test_custom_model.py  test_custom_model_agent.py  test_helper.py  test_my_agent_class_agent.py  test_run_agent.py  test_tools_client.py
agent_llamaindex/: README.md  Taskfile.yml  cli.py  pyproject.toml  run_agent.py
agent_llamaindex/agent_cli/: kernel.py
agent_llamaindex/custom_model/: agent.py  custom.py  helpers.py  helpers_telemetry.py  model-metadata.yaml  tools_client.py
agent_llamaindex/custom_model/my_agent_class/: agent.py
agent_llamaindex/docker_context/: Dockerfile  Dockerfile.prod  requirements.in  requirements.txt
agent_llamaindex/tests/: conftest.py  test_agent_cli_environment.py  test_agent_cli_kernel.py  test_custom_model.py  test_custom_model_agent.py  test_my_agent_class_agent.py  test_run_agent.py  test_tools_client.py
api_tests/: .env.sample  README.md  Taskfile.yml  pyproject.toml
api_tests/api_tests/: conftest.py
api_tests/api_tests/test_agents/: helpers.py  test_agent_e2e.py
api_tests/docker_context/: Dockerfile  setup.sh
core/: Taskfile.yaml  pyproject.toml
core/src/core/: __init__.py
docs/: developing-agents-cli.md  developing-agents-llm-providers.md  developing-agents-python-requirements.md  developing-agents-tools.md  developing-agents.md  getting-started-prerequisites.md  getting-started.md  uv-task-pulumi.md
docs/img/: datarobot_logo.avif
frontend_web/: .gitignore  .prettierrc.json  README.md  Taskfile.yaml  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend_web/src/: App.css  App.tsx  global.d.ts  index.css  main.tsx  routesConfig.tsx
frontend_web/src/api/: apiClient.ts  types.ts  utils.ts
frontend_web/src/constants/: dev.ts  markdown.tsx  paths.ts
frontend_web/src/lib/: utils.ts
frontend_web/src/pages/: Chat.tsx  OAuthCallback.tsx  SettingsLayout.tsx  SettingsPlaceholder.tsx  SettingsSources.tsx  index.tsx  routes.ts
frontend_web/src/state/: AppStateProvider.tsx  constants.ts  index.ts  reducer.ts  storage.ts  types.ts
frontend_web/tests/: App.test.tsx
infra/: .gitignore  Pulumi.yaml  Taskfile.yaml  __main__.py  pyproject.toml
infra/configuration/oauth/: authlib_provider.py  datarobot_provider.py
infra/feature_flags/: agent_crewai.yaml  agent_generic_base.yaml  agent_langgraph.yaml
infra/infra/: __init__.py  agent_crewai.py  agent_generic_base.py  agent_langgraph.py  agent_llamaindex.py  frontend_web.py  llm_datarobot.py  oauth.py  web.py
infra/tests/: test_agent_crewai.py  test_agent_generic_base.py  test_agent_langgraph.py  test_agent_llamaindex.py
web/: .gitignore  .licenserc.yaml  README.md  Taskfile.yaml  alembic_migration.py  pyproject.toml  start-app.sh
web/app/: __init__.py  config.py  db.py  deps.py
web/app/api/v1/: __init__.py  (+3 more)
web/app/auth/: api_key.py  ctx.py  oauth.py  session.py
web/app/chats/: __init__.py
web/app/messages/: __init__.py
web/app/models/: chats.py  messages.py
web/app/users/: auth.py  identity.py  tokens.py  user.py
web/migrations/: env.py  script.py.mako
web/templates/: index.html
web/tests/: conftest.py
web/tests/integration/: conftest.py  test_identity_repository.py
(+48 files in other folders)
