[project]
name = "infra"
version = "0.0.1"
description = """
This is a template for DataRobot Agents.
"""
requires-python = ">=3.11"

dependencies = [
    "datarobot-pulumi-utils>=0.0.2.post8",
    "pulumi>=3.162.0",
    "pulumi-datarobot>=0.9.0",
    "jinja2>=3.1.5,<4.0"
]


[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
